# es-shell

./: .clang-format  .editorconfig  .gitignore  INSTALL  Makefile.in  README.md  access.c  closure.c  configure.ac  conv.c  dict.c  dump.c  es.h  esbool.h  esconfig.h  estypes.h  eval.c  except.c  fd.c  gc.c  gc.h  getopt.c  glob.c  glom.c  heredoc.c  initial.es  input.c  input.h  list.c  main.c  match.c  mksignal  mksignal.c  open.c  opt.c  parse.y  prim-ctl.c  prim-etc.c  prim-io.c  prim-sys.c  (+24 more)
doc/: es.1
m4/: cstd.m4  readline.m4
